--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -45,7 +45,13 @@
             "name": "ohos.extension.backup",
             "resource": "$profile:backup_config"
           }
-        ],
+        ]
+      }
+    ],
+    "requestPermissions": [
+      {
+        "name" : "ohos.permission.INTERNET",
+        "usedScene": {"abilities": ["EntryAbility"],"when": "inuse"}
       }
     ]
   }
