1.增加分类和故事详情跳转

--- a/AppScope/app.json5
+++ b/AppScope/app.json5
@@ -1,6 +1,6 @@
 {
   "app": {
-    "bundleName": "com.wanzi.aidiom",
+    "bundleName": "com.wanzi.story",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
