--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -44,6 +44,10 @@
           {
             "name": "ohos.extension.backup",
             "resource": "$profile:backup_config"
+          },
+          {
+            "name": "client_id",
+            "value": "112763215"
           }
         ]
       }
