--- a/AppScope/app.json5
+++ b/AppScope/app.json5
@@ -1,10 +1,10 @@
 {
   "app": {
     "bundleName": "com.wanzi.story",
-    "vendor": "example",
-    "versionCode": 1000000,
-    "versionName": "1.0.0",
-    "icon": "$media:app_icon",
+    "vendor": "tanggongwen",
+    "versionCode": 1,
+    "versionName": "0.0.9",
+    "icon": "$media:icon_logo",
     "label": "$string:app_name"
   }
 }
