--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -34,6 +34,12 @@
         ]
       }
     ],
+    "metadata": [ // 配置信息如下
+      {
+        "name": "client_id",
+        "value": "112763215"
+      }
+    ],
     "extensionAbilities": [
       {
         "name": "EntryBackupAbility",
@@ -44,11 +50,8 @@
           {
             "name": "ohos.extension.backup",
             "resource": "$profile:backup_config"
-          },
-          {
-            "name": "client_id",
-            "value": "112763215"
           }
+
         ]
       }
     ],
@@ -57,6 +60,7 @@
         "name" : "ohos.permission.INTERNET",
         "usedScene": {"abilities": ["EntryAbility"],"when": "inuse"}
       }
-    ]
+    ],
+
   }
 }
